grammar_to_ply/error_msgs.txt
  File "../programs/python/toy_programs/output_programs/errors/factorial_0_error.py", line 1
    Line no. 1 :  : missing
          ^
SyntaxError: invalid syntax
